semi-final version of the website:

--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,34 @@
 body{
-	background-color: #;
+	background-color: #0B0C10;
+}
+
+h1{
+	color: white;
 }
 
 nav{
-	background-color: #1735F5;
+	background-color: #1f2833;
   	overflow: hidden;
 }
 
 nav a{
 	float: left;
-	color: #f2f2f2;
+	color: #66fcf1;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
 	text-decoration: none;
 	font-size: 17px;
-	color:black;
+	text-decoration-color: white;
 }
 
 nav a:hover{
-	background-color: #20639B;
+	background-color: #45a29e;
   	color: black;
 }
 
 nav a.active{
-	background-color: #F6d55c;
+	background-color: #66fcf1;
   	color: black;
 }
 
@@ -79,4 +83,5 @@ footer{
 	padding-top: 10px;
 	padding-bottom: 0px;
 	float: bottom;
+	color: white;
 }
