--- a/css/style.css
+++ b/css/style.css
@@ -1,50 +1,109 @@
 body{
-	background-color: #0B0C10;
+	background-color: white;
 }
 
 h1{
-	color: white;
+	color: darkblue;
+    text-decoration: bold;
+    font-size: 50px;
 }
 
-nav{
-	background-color: #1f2833;
-  	overflow: hidden;
+
+#countdown {
+    color: white;
+    text-decoration: bold;    
 }
 
-nav a{
+/*------------------------------------------------------------------------------------------------------*/
+.topnav{
+	background-color: white;
+    overflow: hidden;
+    border-bottom: 1px solid #d16812;
+}
+
+.topnav a{
 	float: left;
-	color: #66fcf1;
+	color: #d16812;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
-	text-decoration: none;
 	font-size: 17px;
-	text-decoration-color: white;
 }
 
-nav a:hover{
-	background-color: #45a29e;
-  	color: black;
+.topnav a:hover{
+	background-color: skyblue;
+  	color: #4c2200;
 }
 
-nav a.active{
-	background-color: #66fcf1;
-  	color: black;
+.active{
+	background-color: darkblue;
+  	color: #d16812;
+    border-right: 1px solid #d16812;
+    border-left: 1px solid #d16812;
 }
+
+.topnav .icon {
+    display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/*------------------------------------------------------------------------------------------------------*/
 
 a:hover{
 	text-decoration: none;
 }
 
 .address{
-	padding: 10px;
+    width: 100%;
+    background-color: darkblue;
 }
 
+.address-text{
+    text-align: justify;
+}
 #school-logo{
 	size: 50%;
 	padding: 5px;
 	height: 400px;
 	width: 400px;
+}
+
+.btn-container{
+    background-color: #d16812;
+}
+
+.btn-orange{
+    background-color: blue;
+    color: white;
+    
+}
+
+
+#logo-container {
+    background-color: white;
 }
 
 #address-header{
@@ -71,7 +130,7 @@ a:hover{
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 2px 10px 3px grey;
 }
 
 /* Add some padding inside the card container */
@@ -83,5 +142,30 @@ footer{
 	padding-top: 10px;
 	padding-bottom: 0px;
 	float: bottom;
-	color: white;
+    background-color: darkblue;
+	color: #d16812;
+}
+
+.gallery{
+}
+#img{
+    box-shadow: 0 2px 8px 0 black;
+    border: 20px;
+    border-color: black;
+    border-style: double;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+}
+
+#img:hover{
+    box-shadow: 0 4px 12px 0 black   ;
+}
+
+.gallery_btn{
+    font-size: 50px;
+    line-height: 400px;
+}
+
+.gallery_btn a:hover{
+    cursor: pointer;
 }
